Fixed invisible trim checkbox

--- a/chat/static/sass/chat.sass
+++ b/chat/static/sass/chat.sass
@@ -321,7 +321,7 @@ ul#directUserTable
 		padding: 5px 10px
 		display: inline-block
 		> *
-			display: block
+			display: block !important
 	%hideEl
 		display: inline-block
 		vertical-align: top
